VR Scene Inspection: It shows me only a pink screen. (It doesn't support AMD GPU) #76082

Closed
opened 2020-04-25 02:11:13 +02:00 by Heominnei · 24 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Radeon RX 580 Series ATI Technologies Inc. 4.5.13587 Core Profile Context 20.1.4 26.20.15017.1005
Graphics card: Radeon RX 570 Series ATI Technologies Inc.
HMD: Samsung Odyssey+ WMR, Lenovo Explorer MR

Blender Version
Broken: version: 2.83 (sub 15), branch: master, commit date: 2020-04-23 21:07, hash: d712f1f83a
Broken: version: 2.90 (sub 0), branch: master, commit date: 2020-04-24 21:52, hash: c5f4d5e448
Worked: (newest version of Blender that worked as expected)

Addon Information
Name: VR Scene Inspection (0, 1, 0)
Name: VR Scene Inspection (0, 2, 0)
Author: Julian Eisel (Severin)

Short description of error
I have an issue when I press 'Start VR Session', It shows me only a pink screen in my HMD.
It shows fine in the monitor with 'Mirror VR Session'.
He is having the same problem: https://www.reddit.com/r/blender/comments/fxmx01/openxr_vr_pink_screen_in_vr_problem/

Exact steps for others to reproduce the error
I followed the manual. Set up OpenXR in Mixed Reality Portal, Blender 2.83, Add-on VR Scene Inspection, Start VR Session, and pink screen in my HMD.
my Windows Mixed Reality Portal works fine, even Mixed Reality OpenXR Developer Portal either.

I tried with RX 570 and it does not work either. VR Scene Inspection does not support AMD GPU.

thanks for developing this VR Add-on. I'm really looking foward to it!

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Radeon RX 580 Series ATI Technologies Inc. 4.5.13587 Core Profile Context 20.1.4 26.20.15017.1005 Graphics card: Radeon RX 570 Series ATI Technologies Inc. HMD: Samsung Odyssey+ WMR, Lenovo Explorer MR **Blender Version** Broken: version: 2.83 (sub 15), branch: master, commit date: 2020-04-23 21:07, hash: `d712f1f83a` Broken: version: 2.90 (sub 0), branch: master, commit date: 2020-04-24 21:52, hash: `c5f4d5e448` Worked: (newest version of Blender that worked as expected) **Addon Information** Name: VR Scene Inspection (0, 1, 0) Name: VR Scene Inspection (0, 2, 0) Author: Julian Eisel (Severin) **Short description of error** I have an issue when I press 'Start VR Session', It shows me only a pink screen in my HMD. It shows fine in the monitor with 'Mirror VR Session'. He is having the same problem: https://www.reddit.com/r/blender/comments/fxmx01/openxr_vr_pink_screen_in_vr_problem/ **Exact steps for others to reproduce the error** I followed the manual. Set up OpenXR in Mixed Reality Portal, Blender 2.83, Add-on VR Scene Inspection, Start VR Session, and pink screen in my HMD. my Windows Mixed Reality Portal works fine, even Mixed Reality OpenXR Developer Portal either. I tried with RX 570 and it does not work either. VR Scene Inspection does not support AMD GPU. thanks for developing this VR Add-on. I'm really looking foward to it!
Author

Added subscriber: @Heominnei

Added subscriber: @Heominnei

blender/blender-addons#92579 was marked as duplicate of this issue

blender/blender-addons#92579 was marked as duplicate of this issue

blender/documentation#87372 was marked as duplicate of this issue

blender/documentation#87372 was marked as duplicate of this issue

Added subscriber: @AdamWilk

Added subscriber: @AdamWilk

Can confirm that the pink screen is also appearing with Radeon Pro Duo Polaris hooked up to a (acer) WMR headset.

Can confirm that the pink screen is also appearing with Radeon Pro Duo Polaris hooked up to a (acer) WMR headset.

Added subscriber: @DKesserich

Added subscriber: @DKesserich

Can also confirm this occurring with a Radeon 5700 XT using the SteamVR OpenXR beta with a Vive.

Can also confirm this occurring with a Radeon 5700 XT using the SteamVR OpenXR beta with a Vive.

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Heominnei changed title from VR Scene Inspection: It show me only a pink screen. to VR Scene Inspection: It shows me only a pink screen. (It doesn't support AMD GPU) 2020-06-17 03:10:56 +02:00
Member

Would be good to have this working for 2.90. I spent quite some time trying to get it to work this week again, but it doesn't want to.

Would be good to have this working for 2.90. I spent quite some time trying to get it to work this week again, but it doesn't want to.

Added subscriber: @Prodeous

Added subscriber: @Prodeous

Is this workaround available for download to test?

Win10, Vega GPu with Vive Index, same issue..

My "workaround" is to launch Steam in desktop mode and look through that, but lacks actual VR, but camera is being tracked properly.

Is this workaround available for download to test? Win10, Vega GPu with Vive Index, same issue.. My "workaround" is to launch Steam in desktop mode and look through that, but lacks actual VR, but camera is being tracked properly.

Added subscriber: @Lkrat18

Added subscriber: @Lkrat18
Member

Added subscriber: @NikolayProdanov

Added subscriber: @NikolayProdanov
Member

I'm writing to confirm having a very similar issue (so as not to duplicate this bug report).

When looking at the desktop viewport, the headset's position and rotation are being tracked correctly, but the headset's display just shows a blank white screen instead of a pink screen when looking through it. Interestingly, i have also tried the prepackaged Blender XR which uses custom DLLs to go through SteamVR and there the viewport grid and even the controllers show up correctly. However it is still unusable because no meshes are being drawn and at most you can only see bounding boxes. It uses XR in the name but i can't tell if it uses OpenXR or not... The OpenXR example included with Microsoft's runtime runs normally, so there shouldn't be anything wrong with my installation.

I'm running this on an AMD Radeon RX580 with a Lenovo Explorer mixed reality headset.

I'm writing to confirm having a very similar issue (so as not to duplicate this bug report). When looking at the desktop viewport, the headset's position and rotation are being tracked correctly, but the headset's display just shows a blank white screen instead of a pink screen when looking through it. Interestingly, i have also tried the prepackaged [Blender XR ](https://www.marui-plugin.com/blender-xr/) which uses custom DLLs to go through SteamVR and there the viewport grid and even the controllers show up correctly. However it is still unusable because no meshes are being drawn and at most you can only see bounding boxes. It uses XR in the name but i can't tell if it uses OpenXR or not... The OpenXR example included with Microsoft's runtime runs normally, so there shouldn't be anything wrong with my installation. I'm running this on an AMD Radeon RX580 with a Lenovo Explorer mixed reality headset.

Added subscriber: @Lightbulb

Added subscriber: @Lightbulb
Member

Added subscriber: @Kakunas

Added subscriber: @Kakunas
Member

Added subscriber: @Pfil112

Added subscriber: @Pfil112

Added subscriber: @nardatronic

Added subscriber: @nardatronic

I have the same pink screen issue but see the HMD tracking movement in blender, running NVIDIA 3070 in 2.92.0
Oculus Quest 2+Link and SteamVR.

I have the same pink screen issue but see the HMD tracking movement in blender, running NVIDIA 3070 in 2.92.0 Oculus Quest 2+Link and SteamVR.
Added subscribers: @JUNOJACK, @simeon-4, @muxed-reality, @SimeonConzendorf, @mano-wii, @sebastian_k

Added subscriber: @CheesecakeCG

Added subscriber: @CheesecakeCG
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by dd6fd06c15

This issue was referenced by dd6fd06c15b7edfa1e277a7af8b6bf08e275d8a1
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Peter Kim self-assigned this 2022-02-17 07:38:51 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
14 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76082
No description provided.